# Adaptive-chess-bot-v1.0

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  launch_gui.bat  main.py  ouroboros_gui.py  railway.toml  requirements.txt  run.bat  run.sh
ouroboros/: __init__.py  cloud_setup.py  config.py  logging_setup.py  persistence.py  scheduler.py  status.py  sync.py  sync_gdrive.py  web_viewer.py  wizard.py
ouroboros/engine/: encoding.py  mcts.py  network.py  timeman.py
ouroboros/learning/: buffer.py  online.py  seed.py  selfplay.py  trainer.py
ouroboros/lichess/: client.py  events.py  game.py  matchmaker.py
ouroboros/opponents/: adapt.py  antibot.py  profiles.py
rust_ext/: Cargo.toml  pyproject.toml
rust_ext/src/: lib.rs
tests/: test_buffer.py  test_encoding.py  test_mcts.py  test_profiles.py
